--- a/.gitignore
+++ b/.gitignore
@@ -58,4 +58,4 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
-Category Is/UserSettings/EditorUserSettings.asset
+Category*Is/UserSettings/EditorUserSettings.asset
